--- a/.github/workflows/testFiles.yml
+++ b/.github/workflows/testFiles.yml
@@ -91,24 +91,18 @@ jobs:
           done
         shell: bash
 
-      - name: Auto Comment
-        uses: actions/github-script@v6
+      - name: Comment PR
+        uses: thollander/actions-comment-pull-request@v2
         with:
-          script: |
-            const dockerComposeChecks = JSON.parse(process.env.GITHUB_OUTPUT_DOCKER_COMPOSE_CHECKS);
-            const umbrelAppChecks = JSON.parse(process.env.GITHUB_OUTPUT_UMBREL_APP_CHECKS);
+          message: |
+            if there are any errors or warnings they will be listed below:
 
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: 'if there are any errors or warnings they will be listed below:' +
-                '\n\n### `docker-compose.yml`' +
-                (dockerComposeChecks.IMAGE_ERROR !== '' ? '\n- 🛑 ' : '\n- ✅ No image errors') + dockerComposeChecks.IMAGE_ERROR +
-                (dockerComposeChecks.LATEST_TAG_ERROR !== '' ? '\n- 🛑 ' : '\n- ✅ No latest tag errors') + dockerComposeChecks.LATEST_TAG_ERROR +
-                (dockerComposeChecks.PROXY_AUTH_ERROR !== '' ? '\n- 🛑 ' : '\n- ✅ No proxy auth errors') + dockerComposeChecks.PROXY_AUTH_ERROR +
-                '\n\n### `umbrel-app.yml`' +
-                (umbrelAppChecks.REQUIRED_FIELD_ERROR !== '' ? '\n- 🛑 ' : '\n- ✅ All required fields present') + umbrelAppChecks.REQUIRED_FIELD_ERROR +
-                (umbrelAppChecks.CATEGORY_ERROR !== '' ? '\n- 🛑 ' : '\n- ✅ Category value is lowercase') + umbrelAppChecks.CATEGORY_ERROR +
-                (umbrelAppChecks.OPTIONAL_FIELD_WARNING !== '' ? '\n- ⚠️ ' : '\n- ✅ All optional fields present') + umbrelAppChecks.OPTIONAL_FIELD_WARNING
-            })
+            ### `docker-compose.yml`
+            ${{ steps.docker_compose_checks.outputs.IMAGE_ERROR != '' && '- 🛑 ' || '- ✅ No image errors' }} ${{ steps.docker_compose_checks.outputs.IMAGE_ERROR }}
+            ${{ steps.docker_compose_checks.outputs.LATEST_TAG_ERROR != '' && '- 🛑 ' || '- ✅ No latest tag errors' }} ${{ steps.docker_compose_checks.outputs.LATEST_TAG_ERROR }}
+            ${{ steps.docker_compose_checks.outputs.PROXY_AUTH_ERROR != '' && '- 🛑 ' || '- ✅ No proxy auth errors' }} ${{ steps.docker_compose_checks.outputs.PROXY_AUTH_ERROR }}
+
+            ### `umbrel-app.yml`
+            ${{ steps.umbrel_app_checks.outputs.REQUIRED_FIELD_ERROR != '' && '- 🛑 ' || '- ✅ All required fields present' }} ${{ steps.umbrel_app_checks.outputs.REQUIRED_FIELD_ERROR }}
+            ${{ steps.umbrel_app_checks.outputs.OPTIONAL_FIELD_WARNING != '' && '- ⚠️ ' || '- ✅ All optional fields present' }} ${{ steps.umbrel_app_checks.outputs.OPTIONAL_FIELD_WARNING }}
+            ${{ steps.umbrel_app_checks.outputs.CATEGORY_ERROR != '' && '- 🛑 ' || '- ✅ Category value is lowercase' }} ${{ steps.umbrel_app_checks.outputs.CATEGORY_ERROR }}
