--- a/.github/workflows/testFiles.yml
+++ b/.github/workflows/testFiles.yml
@@ -95,7 +95,7 @@ jobs:
         uses: thollander/actions-comment-pull-request@v2
         with:
           message: |
-            if there are any errors or warnings they will be listed below:
+            Checklist:
 
             ### `docker-compose.yml`
             ${{ steps.docker_compose_checks.outputs.IMAGE_ERROR != '' && '- 🛑 ' || '- ✅ Multi-Architecture Images' }} ${{ steps.docker_compose_checks.outputs.IMAGE_ERROR }}
