--- a/helipad/docker-compose.yml
+++ b/helipad/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: 2112
 
   web:
-    image: podcastindexorg/podcasting20-helipad:v0.1.10@sha256:8c6854dd13bda2564c90819ba2277e7b7e68f58946238b1d71d8f6a677d2de64
+    image: podcastindexorg/podcasting20-helipad@sha256:6767de3126b0a7d317f7c87766a1f063baa44fb85dc5496c794ff9aff306a4c1
     init: true
     restart: on-failure
     stop_grace_period: 1m
