--- a/snort/umbrel-app.yml
+++ b/snort/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: snort
 category: social
 name: Snort
-version: "v0.1.16"
+version: "v0.1.19"
 tagline: Fast Nostr UI
 description: >-
   Snort is a client for Nostr that is built using React, designed to be fast and lightweight while still offering a wide range of features. 
@@ -37,6 +37,8 @@ releaseNotes: >-
 
   - NIP-28 public chats
 
+  - Highlight search results on search page
+
 
   ## Changed
 
@@ -60,9 +62,11 @@ releaseNotes: >-
   - Long form content loading and replies
 
   - Search function restored
+
+  - Copy to clipboard fixed for insecure context
   
 
-  https://git.v0l.io/Kieran/snort/compare/v0.1.13...v0.1.16
+  https://git.v0l.io/Kieran/snort/compare/v0.1.13...v0.1.19
 developer: Snort
 website: https://snort.social
 dependencies: []
