--- a/mutiny-wallet/umbrel-app.yml
+++ b/mutiny-wallet/umbrel-app.yml
@@ -3,14 +3,14 @@ id: mutiny-wallet
 category: bitcoin
 name: Mutiny Wallet
 version: "0.4.20"
-tagline: Mutiny is a self-custodial lightning wallet that runs in the browser.
+tagline: Mutiny is a self-custodial lightning wallet that runs in the web.
 description: >-
-  Mutiny is a self-custodial lightning wallet that runs in the browser. It is a
+  Mutiny is a self-custodial lightning wallet that runs in the web. It is a
   not a traditional lightning node that is always online, but rather a wallet
-  that runs in your browser.
+  that runs in your browser of the device of you're accessing it from.
 
   Mutiny comes with full functionality for sending and receiving on-chain and lightning
-  payments. It also supports many social features like many Nostr integrations like
+  payments. It also supports many social features like Nostr integrations like
   Nostr Wallet Connect, Nostr Contacts, and a Zap Feed.
 
   WARNING: This is an beta software, don't put too much money in.
