Upgrade Torq to v1.1.5

--- a/torq/umbrel-app.yml
+++ b/torq/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: torq
 category: bitcoin
 name: Torq
-version: "v1.1.1"
+version: "v1.1.5"
 tagline: Scalable Node Management Software
 description: >-
   Operating a Lightning node requires a lot of work. You need to monitor your channels, rebalance them, keep track of your fees and much more.
@@ -52,21 +52,12 @@ gallery:
   - 5.jpg
 releaseNotes: >-
   
-  Torq v1.1.1
+  Torq v1.1.5
   
-  Features and bugfixes:
-    - Discord integration
-    - Notifications via workflows (Telegram, Discord and Slack)
-    - Uptime metrics and visualizations
-    - Satcomma formatting on dashboard (and in notifications)
-    - Summary on Payments, On Chain Transactions and Invoices pages (+ small updates)
-    - Peers page paging (+ small updates)
-    - Hitting dry run will always generate logs even when it's disabled for the workflow
-    - Configurable retention period for workflow logs
-    - Cron trigger is now aware of the timezone
-    - Prometheus database metric interval set to 10 minutes
-    - Various CLN fixes (Thanks Boltz team!)
-    - Various performance enhancements
+  - Package upgrades
+  - Bugfixes:
+    - Fixed Incorrect ordering of locked columns in table views
+    - CLN payment status was stuck or not showing correct status
 
 path: ""
 defaultUsername: ""
