tweak whitespace in release notes

--- a/snort/umbrel-app.yml
+++ b/snort/umbrel-app.yml
@@ -17,13 +17,7 @@ releaseNotes: >-
 
   - Zap Splits: NIP-57.G
 
-  - New Languages:
-
-    - Finnish
-
-    - Dutch
-
-    - Portuguese Brazilian 
+  - New Languages: Finnish, Dutch, and Portuguese Brazilian 
 
   - User status on profile pages (Music only [NIP-38])
 
