add version tag

--- a/snort/docker-compose.yml
+++ b/snort/docker-compose.yml
@@ -7,5 +7,5 @@ services:
       APP_PORT: 80
 
   web:
-    image: voidic/snort@sha256:3bf8845a49c5ddc185be8121a35cf961e55537b780531e72a852e41ce658b1eb
+    image: voidic/snort:v0.1.19@sha256:3bf8845a49c5ddc185be8121a35cf961e55537b780531e72a852e41ce658b1eb
     init: true
