--- a/snort/umbrel-app.yml
+++ b/snort/umbrel-app.yml
@@ -2,49 +2,65 @@ manifestVersion: 1
 id: snort
 category: social
 name: Snort
-version: "v0.1.13"
+version: "v0.1.19"
 tagline: Fast Nostr UI
 description: >-
   Snort is a client for Nostr that is built using React, designed to be fast and lightweight while still offering a wide range of features. 
   Our focus is on providing users with an easy-to-use interface to interact with the Nostr network, making it accessible to all types of users. 
   With its clean and intuitive design, Snort makes it simple to navigate the Nostr network and access its features, allowing users to efficiently manage their data.
 releaseNotes: >-
-  # Added
+  ## Added
 
-  - Snort V2 Design
+  - Timeline cache: faster page loads and much lower data usage
 
-  - NIP-24 Encrypted secret chats (nsec login only)
+  - WASM module: Some code moved to Rust WASM module for faster execution
 
-  - NIP-13 Proof of Work (POW)
+  - Zap Splits: NIP-57.G
 
-  - NIP-31 Alt tag spec for unknown event kinds
+  - New Languages: Finnish, Dutch, and Portuguese Brazilian 
 
-  - Render mentioned zap goals (Kind 9041)
+  - User status on profile pages (Music only [NIP-38])
 
-  - Embed fonts in src (No more google fonts requests)
+  - Following mark on avatars, if you follow the pubkey you will see a green tick on their avatar
 
-  - Native key storage for Android app (`Nip7os` interface)
+  - Pin encryption, encrypted private key storage for nsec login
 
-  - Swahili translations
+  - Pubkey (readonly) logins hide buttons which cannot be used (reactions, reply, save profiles, dms etc)
 
-  - Thai translations
+  - Muted words feature (phase 1)
 
+  - NIP-28 public chats
 
-  # Changed
-
-  - PWA pre-cache setup (Faster PWA loading)
-
-  - Show note creator button on profile pages
+  - Highlight search results on search page
 
 
-  # Fixed
+  ## Changed
 
-  - Umlauts in urls 
+  - Count polls by pubkey
 
-  - Reject events which don't match request filter
+  - Styles changes for Content warnings
+
+  - Live stream embed styles
+
+  - Cashu token embed styles
+
+  - Snort Deck thread navigation in modal from timeline
+
+  - PoW miner moved to WASM module for faster hashing
 
 
-  https://git.v0l.io/Kieran/snort/compare/v0.1.12...v0.1.13
+  ## Fixed
+
+  - Profile link to dms 
+
+  - Long form content loading and replies
+
+  - Search function restored
+
+  - Copy to clipboard fixed for insecure context
+  
+
+  https://git.v0l.io/Kieran/snort/compare/v0.1.13...v0.1.19
 developer: Snort
 website: https://snort.social
 dependencies: []
