--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: immich
 category: files
 name: Immich
-version: "v1.79.1"
+version: "v1.81.0"
 tagline: High-performance photo and video backup solution
 description: >-
   An open-source and high-performance self-hosted backup solution for the videos and photos on your mobile device
@@ -45,17 +45,26 @@ description: >-
   
   - User-defined storage structure
 releaseNotes: >-
+  ⚠️ Fixes a security vulnerability (CVE-2023-5129) by rebuilding the Docker image with the newest Debian libwebp library
+
+  ⚠️ Migrate thumbnails to a new folder structure by running the new migration job "Admin > Settings > Migration"
+
+  ⚠️ The reverse geocoding settings have been moved to the admin settings pages. If you have set the level of accuracy in the ".env" file, you will need to make the corresponding changes in the settings menu on the administration page on the web.
+
+
   This update includes many bug fixes and performance improvements, including the following highlights:
   
-  - Support for external libraries
+  - Added mechanism to store generated files for thumbnails and encoded-videos in subfolders
 
-  - Better synchronization mechanism on the mobile app
+  - Added an ability to suggest people’s names during name assignment for faces
   
-  - Set minimum detected face to show on your instance
+  - Added an option to show the sidebar menu for the people page in the user setting on the web
 
-  - Allow self-signed certificate on the mobile app
+  - Added week number as an option for path templating
 
-  - Fixed LivePhotos upload on iOS
+  - Fixes issues related to External Libraries, metadata processing, and Live Photos
+
+  - and more!
 
 
   Full release notes are found at: https://github.com/immich-app/immich/releases
