--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -45,12 +45,13 @@ description: >-
   
   - User-defined storage structure
 releaseNotes: >-
-  ⚠️ Fixes a security vulnerability (CVE-2023-5129) by rebuilding the Docker image with the newest Debian libwebp library
+  ⚠️ Please update Immich to this version as soon as possible. This release fixes a severe security vulnerability caused by a third-party dependency.
+  Additionally, please note the following actions that may be required after the update:
 
-  ⚠️ Migrate thumbnails to a new folder structure by running the new migration job "Admin > Settings > Migration"
-
-  ⚠️ The reverse geocoding settings have been moved to the admin settings pages. If you have set the level of accuracy in the ".env" file, you will need to make the corresponding changes in the settings menu on the administration page on the web.
-
+    - The reverse geocoding settings have been moved to the admin settings pages. If you have set the level of accuracy in the ".env" file, you will need to make the corresponding changes in the settings menu on the administration page on the web.
+    
+    - Please migrate thumbnails to a new folder structure by running the new migration job in "Admin > Settings > Migration"
+    
 
   This update includes many bug fixes and performance improvements, including the following highlights:
   
