--- a/home-assistant/umbrel-app.yml
+++ b/home-assistant/umbrel-app.yml
@@ -6,24 +6,29 @@ version: "2023.9.3"
 tagline: Home automation that puts local control & privacy first
 description: >-
   Open source home automation that puts local control and privacy
-  first, powered by a worldwide community of tinkerers and DIY enthusiasts. Home
-  Assistant integrates with over a thousand different devices and services. Once
-  you have integrated all your devices at home, you can unleash Home Assistant’s
-  advanced automation engine to make your home work for you. Examples: 
-
+  first. Powered by a worldwide community of tinkerers and DIY enthusiasts.
+  Once started, Home Assistant will automatically scan your network for known devices and allow you to easily set them up.
+  Home Assistant integrates with over a thousand different devices and services.
+  
+  
+  Once you have integrated all your devices at home, you can unleash Home Assistant’s
+  advanced automation engine to make your home work for you. Do things like: 
 
   - Turn on the light when the sun sets or when coming home 
 
-  - Alert you when you leave your garage door open 
+  - Get an alert when you leave your garage door open 
 
 
-  All your smart home data stays local. Home Assistant communicates with your devices locally, and will fallback to pulling in data from the cloud if there is no other option. No data is stored in the cloud, and everything is processed locally.
+  Home Assistant keeps your data local, no need for a cloud. Home Assistant communicates with your devices locally, and will fallback to pulling in data from the cloud if there is no other option. No data is stored in the cloud, and everything is processed locally.
+
+
+  Note: The USB adapter discovery feature (e.g., for Zigbee dongles connected directly to the device running Umbrel) may not work reliably for Umbrel users on Raspberry Pi.
 developer: Home Assistant
 website: https://home-assistant.io
 dependencies: []
 repo: https://github.com/home-assistant/core
 support: https://community.home-assistant.io
-port: 8123
+port: 8123 
 gallery:
   - 1.jpg
   - 2.jpg
