--- a/jellyfin/umbrel-app.yml
+++ b/jellyfin/umbrel-app.yml
@@ -32,11 +32,16 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >-
-  ⚠️ CRITICAL SECURITY ADVISORY: There's a significant security issue in previous versions, where two vulnerabilities can be paired to allow any Jellyfin user, even those without admin rights, to remotely control the system. One of these issues has been around since the 10.8.0 release, while the other has been present in all versions of Jellyfin up to now. It's essential for all Jellyfin administrators to update to this version, especially if they have untrusted users or if their Jellyfin is accessible on the Internet.
+  ⚠️ PREVIOUS CRITICAL SECURITY ADVISORY: For user's still running Jellyfin version 10.8.9 and below, please update Jellyfin immediately.
+  There is a significant security issue in previous versions, where two vulnerabilities can be paired to allow any Jellyfin user, even those without admin rights, to remotely control the system.
+  One of these issues has been around since the 10.8.0 release, while the other has been present in all versions of Jellyfin up to now. It's essential for all Jellyfin administrators to update to this version,
+  especially if they have untrusted users or if their Jellyfin is accessible on the Internet.
   
-  Bug fixes & improvements
+  
+  This update is a hotfix release with no new features or major improvements.
 
-  Full changelogs for Jellyfin releases can be found here: https://github.com/jellyfin/jellyfin/releases
+
+  Full release notes can be found here: https://github.com/jellyfin/jellyfin/releases
 torOnly: false
 permissions:
   - STORAGE_DOWNLOADS
