Update ghostfolio to 2.11.0

--- a/ghostfolio/umbrel-app.yml
+++ b/ghostfolio/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: ghostfolio
 category: finance
 name: Ghostfolio
-version: "1.287.0"
+version: "2.11.0"
 tagline: Manage your wealth like a boss
 description: >-
   Ghostfolio is a privacy-first, open source dashboard for your personal finances.
@@ -31,20 +31,31 @@ path: ""
 deterministicPassword: false
 torOnly: false
 releaseNotes: >
+  Moving from v1.287.0 to v2.11.0, this update includes numerous bug fixes, performance improvements, and exciting new features. Here's what's new in the latest version:
+  
+  Added:
+
+    - Added support to transfer a part of the cash balance from one to another account
+    - Extended the markets overview by benchmarks (date of last all time high)
+    - Added support to import historical market data in the admin control panel
+
   Changed:
 
-  - Hid the average buy price in the position detail chart if there is no holding
-  
-  - Improved the language localization for French
-  
-  - Refactored the blog articles to standalone components
-
+    - Harmonized the style of the create button on the page for granting and revoking public access to share the portfolio
+    - Improved the language localization for German (de)
+    - Upgraded prisma from version 5.3.1 to 5.4.2
 
   Fixed:
-  
-  - Fixed the sorting by currency in the activities table
 
+    - Fixed FEE and INTEREST types in the activities import of csv files
+    - Fixed the displayed currency of the cash balance in the create or update account dialog
 
-  For full release notes and additional changes from previous version 1.269, please visit: https://github.com/ghostfolio/ghostfolio/releases
+  Special Thanks
+
+    @Dhoni77
+    @dtslvr
+    @KK4ito
+
+  For full release notes and additional changes from previous versions, please visit: https://github.com/ghostfolio/ghostfolio/releases
 submitter: BeauAgst
 submission: https://github.com/getumbrel/umbrel-apps/pull/396
