--- a/tdex/umbrel-app.yml
+++ b/tdex/umbrel-app.yml
@@ -16,6 +16,19 @@ description: >-
   by the trader, without the need to connect to an external price feed. The default strategy of the alpha daemond is the
   constant product market-making. In short, this model generates a full order-book based on an initial price for the market.
   Every transaction that occurs on this market will adjust the prices of the market accordingly.
+releaseNotes: >-
+  This is a major update of the TDEX daemon that contains several changes, including:
+
+  - Update to TDEXv2: the daemon's Trade interface implements the specs of the new TDEX v2 protocol. With this update the daemon makes
+  use of PSETv2 as a way for describing and build transactions (instead of the old PSETv0), and, also, exposes some new endpoint according
+  to the spec.
+  
+  - Wallet detachment: the daemon now requires a connection to an Ocean wallet that is fully responsible of deriving new key pairs
+  and scan the chain for them. The wallet produces events consumed by the daemon for confirmed/unconfirmed txs and utxos.
+  This drastically improves the overall perfomances of the service.
+  You don't need to manually claim the funds deposited to the dameon anymore.
+
+  - Embedded price feeder: the daemon allows you to set up price feeds for your pluggable-strategy markets to keep their price always up-to-date.
 dependencies: []
 developer: TDEX Network
 website: https://dev.tdex.network
@@ -23,7 +36,7 @@ repo: https://github.com/tdex-network/tdex-daemon
 support: https://t.me/tdexnetwork
 submitter: TDEX Network (tiero)
 submission: https://github.com/getumbrel/umbrel-apps/pull/151
-port: 9094
+port: 9092
 torOnly: false
 gallery:
   - 1.jpg
