Update PhotoPrism to 230923 (#794)

--- a/photoprism/umbrel-app.yml
+++ b/photoprism/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: photoprism
 category: files
 name: PhotoPrism
-version: "230625"
+version: "230923"
 tagline: Self-host your photo and video library
 description: >-
   PhotoPrism® is a privately hosted app for browsing, organizing, and
@@ -42,21 +42,7 @@ defaultUsername: "admin"
 deterministicPassword: true
 torOnly: false
 releaseNotes: >-
-  This update brings a ton of new features, performance improvements, and bug fixes, including:
-
-  - new high-resolution vector world map
-  
-  - improved performance, security, and file type support
-
-  - improved translations
-
-  - improved video trascoding
-
-  - improved user interface
-
-  - new themes
-
-  - and more!
+  Our latest release includes a redesigned Places view, with the search box moved to the top and a preview for selected clusters at the bottom. We've also added support for Samsung/Google Motion Photos, so you can view them like Apple Live Photos after re-indexing your library. Beyond those highlights, you'll get many usability improvements, new search filters, and fixes for recently discovered issues. A big thank you to everyone who contributed!
 
 
   Full release notes can be found at: https://github.com/photoprism/photoprism/releases/
