change blackhole directory on host to bind main umbrel downloads directory

--- a/jackett/docker-compose.yml
+++ b/jackett/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     restart: on-failure
     volumes:
       - ${APP_DATA_DIR}/data:/config
-      - ${APP_DATA_DIR}/blackhole:/downloads
+      - ${UMBREL_ROOT}/data/storage/downloads:/downloads
     stop_grace_period: 1m
     environment:
       - PUID=1000
