--- a/jackett/umbrel-app.yml
+++ b/jackett/umbrel-app.yml
@@ -3,10 +3,11 @@ id: jackett
 category: media
 name: Jackett
 version: "0.21.1000"
-tagline: API Support for your favorite torrent trackers
+tagline: API support for your favorite torrent trackers
 description: >-
-  Jackett works as a proxy server: it translates queries from apps (Sonarr, Radarr, SickRage, CouchPotato, Mylar3, Lidarr, DuckieTV, qBittorrent, Nefarious etc.) into tracker-site-specific http queries, parses the html or json response, and then sends results back to the requesting software. This allows for getting recent uploads (like RSS) and performing searches. Jackett is a single repository of maintained indexer scraping & translation logic - removing the burden from other apps.
-
+  Jackett works as a proxy server: it translates queries from apps (Sonarr, Radarr, SickRage, CouchPotato, Mylar3, Lidarr, DuckieTV, qBittorrent, Nefarious, etc) into tracker-site-specific http queries,
+  parses the html or json response, and then sends results back to the requesting software. This allows for getting recent uploads (like RSS) and performing searches.
+  Jackett is a single repository of maintained indexer scraping & translation logic - removing the burden from other apps.
 developer: Jackett
 website: https://github.com/Jackett/Jackett/
 dependencies: []
