whitelist /api route

--- a/jackett/docker-compose.yml
+++ b/jackett/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     environment:
       APP_HOST: jackett_server_1
       APP_PORT: 9117
+      PROXY_AUTH_WHITELIST: "/api/*"
 
   server:
     image: lscr.io/linuxserver/jackett:0.21.1000@sha256:e18a335d79676933b9f3f08ec4aa4b760d991ae59b6f2203da68cac7771aceaf
