--- a/chatpad-ai/docker-compose.yml
+++ b/chatpad-ai/docker-compose.yml
@@ -7,5 +7,5 @@ services:
       APP_PORT: 80
 
   web:
-    image: ghcr.io/deiucanta/chatpad:e8240a7befc6c84bb1a112407059a463fcc54ee1sha256:0cac0f3510096b308b426e9b382cfc1796d5b61abaeb22eb15baa2e95eb75cf6
+    image: ghcr.io/deiucanta/chatpad:e8240a7befc6c84bb1a112407059a463fcc54ee1@sha256:0cac0f3510096b308b426e9b382cfc1796d5b61abaeb22eb15baa2e95eb75cf6
     restart: on-failure
