chore: add release notes

--- a/chatpad-ai/umbrel-app.yml
+++ b/chatpad-ai/umbrel-app.yml
@@ -23,6 +23,7 @@ gallery:
 path: ""
 defaultUsername: ""
 defaultPassword: ""
-releaseNotes: ""
+releaseNotes: >-
+  - Add support for support for latest OpenAI API & models
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel-apps/pull/604
