initial housekeeping changes

--- a/amato/umbrel-app.yml
+++ b/amato/umbrel-app.yml
@@ -1,11 +1,11 @@
 manifestVersion: 1
 id: amato
-category: productivity
+category: files
 name: Amato Timer
-version: "0.0.1.1"
+version: "0.0.1.2"
 tagline: Simple work timer.
 description: >-
-  A simple timer with default 25 minute increments to track your work.
+  A simple timer to help track your time spent on tasks and boost your productivity. Choose between 5, 10, and 25 minute timers.
 releaseNotes: >-
   This is an initial alpha version
 developer: Bitparasol
@@ -18,3 +18,6 @@ gallery:
 path: ""
 defaultUsername: ""
 defaultPassword: ""
+repo: https://github.com/ziadgit/amato
+support: https://github.com/ziadgit/amato/issues
+submitter: ziadgit, founder of bitparasol
