update umbrel app description schema file

--- a/amato/docker-compose.yml
+++ b/amato/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: 3838
       
   web:
-    image: berkeleyengineer/mopomo:v0.0.1.1
+    image: berkeleyengineer/amato:v0.0.1.2@sha256:399142b4322573725ec0c6e922e56e66331d1f3e4d769459c1d585d68aca989b
     restart: on-failure
     stop_grace_period: 1m
     environment:
