--- a/amato/umbrel-app.yml
+++ b/amato/umbrel-app.yml
@@ -7,8 +7,8 @@ tagline: Simple work timer.
 description:
   A simple timer to help track your time spent on tasks and boost your productivity. Choose between 5, 10, and 25 minute timers.
 releaseNotes: ""
-developer: Bitparasol
-website: http://bitparasol.com
+developer: bitparasol
+website: http://bitparasol.com/amato/
 port: 3838
 gallery:
   - 1.jpg
@@ -19,5 +19,5 @@ defaultUsername: ""
 defaultPassword: ""
 repo: https://github.com/ziadgit/amato
 support: https://github.com/ziadgit/amato/issues
-submitter: ziadgit, founder of bitparasol
+submitter: ziadgit (github) - Ziad Hussain founder of bitparasol
 submission: https://github.com/getumbrel/umbrel-apps/pull/729
