add dependencies line

--- a/amato/umbrel-app.yml
+++ b/amato/umbrel-app.yml
@@ -21,3 +21,4 @@ repo: https://github.com/ziadgit/amato
 support: https://github.com/ziadgit/amato/issues
 submitter: ziadgit (github) - Ziad Hussain founder of bitparasol
 submission: https://github.com/getumbrel/umbrel-apps/pull/729
+dependencies: []
