--- a/amato/umbrel-app.yml
+++ b/amato/umbrel-app.yml
@@ -3,7 +3,7 @@ id: amato
 category: files
 name: Amato Timer
 version: "0.0.1.2"
-tagline: Simple work timer.
+tagline: Simple work timer
 description:
   A simple timer to help track your time spent on tasks and boost your productivity. Choose between 5, 10, and 25 minute timers.
 releaseNotes: ""
