Set RPC restricted port

--- a/monero/docker-compose.yml
+++ b/monero/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       MONERO_HOST: "${APP_MONERO_NODE_IP}"
       MONERO_P2P_PORT: "${APP_MONERO_P2P_PORT}"
       MONERO_RPC_PORT: "${APP_MONERO_RPC_PORT}"
+      MONERO_RESTRICTED_RPC_PORT: "${APP_MONERO_RESTRICTED_RPC_PORT}"
       MONERO_DEFAULT_NETWORK: "${MONERO_DEFAULT_NETWORK}"
       MONERO_RPC_USER: "${APP_MONERO_RPC_USER}"
       MONERO_RPC_PASSWORD: "${APP_MONERO_RPC_PASS}"
