Update Torq to v1.2.1

--- a/torq/umbrel-app.yml
+++ b/torq/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: torq
 category: bitcoin
 name: Torq
-version: "v1.1.5"
+version: "v1.2.1"
 tagline: Scalable Node Management Software
 description: >-
   Operating a Lightning node requires a lot of work. You need to monitor your channels, rebalance them, keep track of your fees and much more.
@@ -51,13 +51,24 @@ gallery:
   - 4.jpg
   - 5.jpg
 releaseNotes: >-
-  Torq v1.1.5
   
-  - Package upgrades
+  Torq v.1.2.1:
 
-  - Fixed Incorrect ordering of locked columns in table views
+  - Improved Dashboard layout
+  - Extra workflow channel filter options based on last activity timestamp (Balance Change, Payment, Invoice, Forward)
+    - Some of these fields only works for LND for now
+  - Support for CLN pagination.
+    - NB! This release requires CLN v23.08 or above.
+    - All invoices will be re-downloaded into Torq on first start after upgrade.
+  - Added Customer ID to torq Checkout page
+  - Workflow Logs Layout fixes and improvements
+  - Search on Open, Closed and Pending Channels is now looking for channel ids and pub keys as well as Peer Alias.
+  - Improvements to Torq settings page
+  - Uses Scaling Lightning
+  - Fixes for close channel workflow notifications
+  - Aliases are now still obtained when new channel are pending
+  - Fixes column ordering on channels pages
 
-  - CLN payment status was stuck or not showing correct status
 path: ""
 defaultUsername: ""
 deterministicPassword: false
