--- a/btc-rpc-explorer/docker-compose.yml
+++ b/btc-rpc-explorer/docker-compose.yml
@@ -3,33 +3,55 @@ version: "3.7"
 services:
   app_proxy:
     environment:
-      APP_HOST: btc-rpc-explorer_web_1
-      APP_PORT: 8080
-
+      # <app-id>_<web-container-name>_1
+      # e.g. 'btc-rpc-explorer_web_1'
+      # Note that the '_1' at the end is needed
+      APP_HOST: <web-container-dns-name>
+      APP_PORT: <web-container-port-number>
+  
   web:
-    image: getumbrel/btc-rpc-explorer:v3.4.0@sha256:e85a1fe80919d308b1f80de2dc7174e7b61ec79384d695304fbf259b67b53594
+    image: <docker-image>:<tag>
     restart: on-failure
     stop_grace_period: 1m
+    ports:
+      # Replace <port> with the port that your app's web server
+      # is listening inside the Docker container. If you need to
+      # expose more ports, add them below.
+      - <port>:<port>
+    volumes:
+      # Uncomment to mount your data directories inside
+      # the Docker container for storing persistent data
+      # - ${APP_DATA_DIR}/foo:/foo
+      # - ${APP_DATA_DIR}/bar:/bar
+
+      # Uncomment to mount LND's data directory as read-only
+      # inside the Docker container at path /lnd
+      # - ${APP_LIGHTNING_NODE_DATA_DIR}:/lnd:ro
+
+      # Uncomment to mount Bitcoin Core's data directory as
+      # read-only inside the Docker container at path /bitcoin
+      # - ${APP_BITCOIN_DATA_DIR}:/bitcoin:ro
     environment:
-      # Docker requirements
-      BTCEXP_HOST: 0.0.0.0
-      BTCEXP_PORT: 8080
-      # Bitcoin Core
-      BTCEXP_BITCOIND_HOST: $APP_BITCOIN_NODE_IP
-      BTCEXP_BITCOIND_PORT: $APP_BITCOIN_RPC_PORT
-      BTCEXP_BITCOIND_USER: $APP_BITCOIN_RPC_USER
-      BTCEXP_BITCOIND_PASS: $APP_BITCOIN_RPC_PASS
-      # Electrum
-      BTCEXP_ADDRESS_API: electrumx
-      BTCEXP_ELECTRUMX_SERVERS: "tcp://$APP_ELECTRS_NODE_IP:$APP_ELECTRS_NODE_PORT"
-      # Log level
-      DEBUG: "btcexp:*,electrumClient"
-      # Performance
-      BTCEXP_SLOW_DEVICE_MODE: "true"
-      BTCEXP_NO_INMEMORY_RPC_CACHE: "true"
-      # Privacy
-      BTCEXP_PRIVACY_MODE: "true"
-      BTCEXP_NO_RATES: "true"
-      # Disable RPC
-      BTCEXP_RPC_ALLOWALL: "false"
-      BTCEXP_BASIC_AUTH_PASSWORD: ""
+      # Pass any environment variables to your app for configuration in the form:
+      # VARIABLE_NAME: value
+      #
+      # Here are all the Umbrel provided variables that you can pass through to
+      # your app
+      # System level environment variables
+      # $DEVICE_HOSTNAME - Umbrel server device hostname (e.g. "umbrel")
+      # $DEVICE_DOMAIN_NAME - A .local domain name for the Umbrel server (e.g. "umbrel.local")
+      #
+      # Tor proxy environment variables
+      # $TOR_PROXY_IP - Local IP of Tor proxy
+      # $TOR_PROXY_PORT - Port of Tor proxy
+      #
+      # App specific environment variables
+      # $APP_HIDDEN_SERVICE - The address of the Tor hidden service your app will be exposed at
+      # $APP_PASSWORD - Unique plain text password that can be used for authentication in your app, shown to the user in the Umbrel UI
+      # $APP_SEED - Unique 256 bit long hex string (128 bits of entropy) deterministically derived from user's Umbrel seed and your app's ID
+  # If your app has more services, like a database container, you can define those
+  # services below:
+  # db:
+  #   image: <docker-image>:<tag>
+  #   ...
+
