--- a/btc-rpc-explorer/umbrel-app.yml
+++ b/btc-rpc-explorer/umbrel-app.yml
@@ -1,8 +1,8 @@
 manifestVersion: 1
 id: btc-rpc-explorer
-category: bitcoin
+category: finance
 name: BTC RPC Explorer
-version: "3.4.0"
+version: "3.3.0"
 tagline: Simple, database-free blockchain explorer
 description: >-
   BTC RPC Explorer is a full-featured, self-hosted explorer for the
@@ -10,28 +10,17 @@ description: >-
   blockchain database, but also explore the functional capabilities of your
   Umbrel.
 
-
   It comes with a network summary dashboard, detailed view of blocks, transactions, addresses, along with analysis tools for viewing stats on miner activity, mempool summary, with fee, size, and age breakdowns. You can also search by transaction ID, block hash/height, and addresses.
-
 
   It's time to appreciate the "fullness" of your node.
 releaseNotes: >-
-  This update brings several changes to BTC RPC Explorer, including:
+  Dark mode is finally here! Easily switch between your preferred mode
+  in one click.
 
-  - Several new API actions/changes (some breaking)
-
-  - Homepage additions such as a "Next Halving" widget.
-
-  - New curated list of Bitcoin "Holidays"
-
-  - Refreshed "Dark" theme with blues toned down (legacy dark theme still available)
-
-  - and more!
-
-
-  Full release notes are available at https://github.com/janoside/btc-rpc-explorer/releases/tag/v3.4.0
+  This version also includes lots of minor styling improvements, better
+  error handling, and several bugfixes.
 developer: Dan Janosik
-website: https://bitcoinexplorer.org/
+website: https://explorer.btc21.org
 dependencies:
   - bitcoin
   - electrs
