--- a/jackett/umbrel-app.yml
+++ b/jackett/umbrel-app.yml
@@ -12,9 +12,14 @@ description: >-
 
   🛠️ SET-UP INSTRUCTIONS
   
-  1. Base URL Configuration: In Jackett, fill in the "Base URL override" with "http://jacket_server_1:9117" without the quotes. This ensures that functionalities like copying a Torznab feed URL to your clipboard work correctly for integration with apps like Sonarr and Radarr.
+
+  1. Base URL Configuration: In Jackett, fill in the "Base URL override" with "http://<the-ip-of-your-umbrel>:9117" without the quotes and replace with the IP of your Umbrel device.
+  You can find your device's IP address by visiting your router's admin dashboard or by using an IP scanning tool like Angry IP Scanner.
+  This ensures that functionalities like copying a Torznab feed URL to your clipboard work correctly for integration with apps like Sonarr and Radarr.
+
 
   2. Blackhole Directory: If you want to download .torrent files directly from Jackett and have a torrent client watch this folder, set the "Blackhole directory" in Jackett to "/downloads" without the quotes. This will allow you to download .torrent files from Jackett to your Umbrel's downloads folder.
+  
   
   3. App Integration: Follow the instructions within Jackett to integrate Jackett as an indexer source for apps like Sonarr and Radarr.
 developer: Jackett
