rename config bind dir

--- a/autobrr/docker-compose.yml
+++ b/autobrr/docker-compose.yml
@@ -13,4 +13,4 @@ services:
     stop_grace_period: 1m
     user: "1000:1000"
     volumes:
-      - ${APP_DATA_DIR}/config:/config
+      - ${APP_DATA_DIR}/data:/config
