update plex to 1.32.6

--- a/plex/umbrel-app.yml
+++ b/plex/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: plex
 category: media
 name: Plex
-version: "1.32.5.7349"
+version: "1.32.6"
 tagline: Stream Movies & TV Shows
 description: >-
   Stream movies and TV shows, plus 300+ channels of live TV, instantly, without a subscription. Watch live TV and movies anywhere, from any device, with Plex.
@@ -26,17 +26,17 @@ torOnly: false
 permissions:
   - STORAGE_DOWNLOADS
 releaseNotes: >-
-  This update includes many bug fixes and performance improvements, as well as the following new features:
+  This update includes many bug fixes and performance improvements, as well as the following new changes:
   
-  - New “Deep Cuts” music station.
+
+  - LinuxServer Changes:
+    - Install unrar from linuxserver repo.
+
+
+  - Remote Changes:
+    - Data change at json endpoint https://plex.tv/api/downloads/5.json
   
-  - Hardware transcoding is now supported for SDR media on AMD GPUs on Linux
   
-  - Hardware transcoding is now supported when running Plex Media Server on headless Windows systems
-  
-  - The GPU used for transcoding can now be selected in server preferences
-  
-  
-  See full release notes here: https://www.videohelp.com/software/Plex/version-history
+  See full release notes here: https://github.com/linuxserver/docker-plex/releases
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel-apps/commit/60878f278d544b204d8e7c96240c797f43a9b319
