--- a/plex/umbrel-app.yml
+++ b/plex/umbrel-app.yml
@@ -29,13 +29,11 @@ releaseNotes: >-
   This update includes many bug fixes and performance improvements, as well as the following new changes:
   
 
-  - LinuxServer Changes:
+  LinuxServer Changes:
     - Install unrar from linuxserver repo.
 
-
-  - Remote Changes:
+  Remote Changes:
     - Data change at json endpoint https://plex.tv/api/downloads/5.json
-  
   
   See full release notes here: https://github.com/linuxserver/docker-plex/releases
 submitter: Umbrel
