--- a/radarr/umbrel-app.yml
+++ b/radarr/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: radarr
 category: media
 name: Radarr
-version: "4.1.0.6175"
+version: "5.0.3.8127"
 tagline: Your movie collection manager
 description: >-
   Radarr is a movie collection manager for Usenet and BitTorrent users. It can monitor multiple RSS feeds for new movies and will interface with clients and indexers to grab, sort, and rename them. It can also be configured to automatically upgrade the quality of existing files in the library when a better quality format becomes available. Note that only one type of a given movie is supported. If you want both an 4k version and 1080p version of a given movie you will need multiple instances.
@@ -18,6 +18,10 @@ gallery:
   - 2.jpg
   - 3.jpg
 path: ""
+releaseNotes: >-
+  Not sure where to find the releaseNotes for the update,
+  releases page on Github seem to be including not much in it.
+
 defaultUsername: ""
 defaultPassword: ""
 torOnly: false
