--- a/torq/umbrel-app.yml
+++ b/torq/umbrel-app.yml
@@ -55,18 +55,25 @@ releaseNotes: >-
   Torq v.1.2.1:
 
   - Improved Dashboard layout
-  - Extra workflow channel filter options based on last activity timestamp (Balance Change, Payment, Invoice, Forward)
-    - Some of these fields only works for LND for now
-  - Support for CLN pagination.
-    - NB! This release requires CLN v23.08 or above.
-    - All invoices will be re-downloaded into Torq on first start after upgrade.
+  
+  - Extra workflow channel filter options based on last activity timestamp (Balance Change, Payment, Invoice, Forward). Some of these fields only works for LND for now.
+  
+  - Support for CLN pagination (This release requires CLN v23.08 or above. All invoices will be re-downloaded into Torq on first start after upgrade.)
+  
   - Added Customer ID to torq Checkout page
+  
   - Workflow Logs Layout fixes and improvements
+  
   - Search on Open, Closed and Pending Channels is now looking for channel ids and pub keys as well as Peer Alias.
+  
   - Improvements to Torq settings page
+  
   - Uses Scaling Lightning
+  
   - Fixes for close channel workflow notifications
+  
   - Aliases are now still obtained when new channel are pending
+  
   - Fixes column ordering on channels pages
 
 path: ""
