add link to guide for unauthorised error

--- a/plex/umbrel-app.yml
+++ b/plex/umbrel-app.yml
@@ -9,6 +9,9 @@ description: >-
   
   
   Plex uses a server to house your media library and player apps to playback the media. Add, access, and share all the entertainment that matters to you, on almost any device.
+
+
+  If you encounter a "not authorized error" when attempting to access your Plex app, please follow the steps in this guide: https://community.umbrel.com/t/fixing-plexs-not-authorized-error/10523
 developer: Plex
 website: https://www.plex.tv/
 dependencies: []
