--- a/n8n/umbrel-app.yml
+++ b/n8n/umbrel-app.yml
@@ -2,59 +2,47 @@ manifestVersion: 1
 id: n8n
 category: automation
 name: n8n
-version: "1.4.0"
+version: "1.9.3"
 releaseNotes: >-
-  Bug Fixes
-
-  - core: Add recoveryInProgress flag file
-
-  - core: Fix continueOnFail for expression error in Set
-
-  - core: Fix import:workflow command
-
-  - core: Replace throw with warning when deactivating a non-active workflow
-
-  - core: Set up OAuth2 cred test
-
-  - editor: Do not flag dynamic load options issue on expression
-
-  - editor: Ensure community node install button tracks user agreement
-
-  - editor: Fix parsing for single quoted resolvables
-
-  - editor: Fix Remove all fields not removing values in resource mapper
-
-  - editor: Prevent Code node linter from erroring on null parse
-  
-  - Google Sheets Node: Fix short sheet name interpreted as range
-
-  - Google Sheets Trigger Node: Support sheet names with non-latin characters
-
-  - GraphQL Node: Improve error handling
-
-  - Mautic Node: Fix issue with owner not being set correctly
-
-  - Salesforce Node: Fix Account update owner operation
-
-  - Shopify Node: Fix pagination when using options
-
-  - Webhook Node: Backward compatible form-data parsing for non-array fields
-  
-
-  Features
-
-  - core: Add a warning to error workflows that cannot be started due to permission or settings (#6961) (67b88f7)
-
-  - core: Add support for ready hooks, and credentials overwrite endpoint in workers (#6954) (8f8a1de)
-
-  - editor: Show banner for non-production licenses (#6943) (413570c)
-
-  - Remove PostHog event calls (#6915) (270946a)
-  
-  - Send Email Node: Add support for sending text and html email simultaneously (#6978) (3860d41)
+  Version Update Highlights (1.4.0 to 1.9.3):
 
 
-  Full details for changes made since version 1.4.0 can be found at https://github.com/n8n-io/n8n/releases/tag/n8n%401.4.0
+  Bug Fixes:
+    - Improved handling of content-type and content-disposition headers (1.8.0)
+    - Enhanced security by addressing CVE issues (1.7.0)
+    - Fixed issues with various nodes, such as Google Cloud Firestore, HubSpot, and Zoho CRM (1.7.0)
+    - Improved error handling for HTTP Request and Webhook Nodes (1.7.0, 1.5.0)
+    - Resolved issues related to SSL certificates (1.5.0)
+    - Fixed MongoDB and PostgreSQL Node issues (1.5.0)
+    - Addressed issues with Date & Time Node and Microsoft Excel 365 Node (1.5.0)
+    - Fixed Agile CRM Node issues (1.5.0)
+
+
+  Features:
+    - Introduced support for in-transit encryption (TLS) on Redis connections (1.6.0)
+    - Added support for floating licenses (1.6.0)
+    - Enhanced user authentication and security with MFA (1.5.0)
+    - Added support for token credentials in Strapi Node (1.5.1)
+    - Introduced external secrets storage for credentials (1.5.0)
+    - Improved user management with filtering, selection, and pagination (1.5.0)
+    - Introduced a command to trigger license refresh on workers (1.5.0)
+    - Added RSA option for SSH key generation (1.5.0)
+    - Overhauled nodes like Linear, Microsoft Outlook, and Set (1.8.0)
+    - Introduced Tournament as the new default expression evaluator (1.8.0)
+    - Introduced an initial workflow history API (1.8.0)
+    - Added object store service (1.8.0)
+    - Introduced onboarding flow (1.9.0)
+    - Added telemetry for user cloud activity (1.9.0)
+    - Implemented an option for enabling WAL mode for SQLite (1.7.0)
+
+
+  Performance Improvements:
+    - Optimized execution management to prevent orphan executions (1.6.0)
+    - Improved efficiency by skipping unneeded calls on pruning cycles (1.8.0)
+    - These highlights showcase the major changes and improvements made across the versions, including bug fixes, security enhancements, and new features to enhance the user experience and reliability of the platform.
+
+
+  Full details for changes made since version 1.4.0 can be found at https://github.com/n8n-io/n8n/blob/master/CHANGELOG.md?plain=1#L1-L186
 tagline: Build complex workflows, really fast
 description: >-
   n8n is an extendable workflow automation tool. With a fair-code distribution model, n8n will always have visible source code, 
