tweak release notes

--- a/chatpad-ai/umbrel-app.yml
+++ b/chatpad-ai/umbrel-app.yml
@@ -24,6 +24,6 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >-
-  - Add support for support for latest OpenAI API & models
+  - Add support for latest OpenAI API & models
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel-apps/pull/604
