feat: change release notes & update version

--- a/plex/docker-compose.yml
+++ b/plex/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.7"
 
 services:
   server:
-    image: linuxserver/plex:1.32.6@sha256:6b82fe376f675a55204b68bd66a369d56c46eccc2fbb34fededa538c1a460b67
+    image: linuxserver/plex:1.32.6.7557-1cf77d501-ls188@sha256:6b82fe376f675a55204b68bd66a369d56c46eccc2fbb34fededa538c1a460b67
     restart: on-failure
     hostname: "${DEVICE_HOSTNAME}"
     environment:
