add release notes

--- a/radarr/umbrel-app.yml
+++ b/radarr/umbrel-app.yml
@@ -19,8 +19,48 @@ gallery:
   - 3.jpg
 path: ""
 releaseNotes: >-
-  Not sure where to find the releaseNotes for the update,
-  releases page on Github seem to be including not much in it.
+  Update Radarr from 4.1.0.6175 to v5.0.3.8127
+
+
+  Fixed:
+
+    -localization test
+
+    -Sorting by movie title in Blocklist and History [ #9234 ]
+
+    -a potential issue when extra files for multiple movies have the same relative path [ #7222 ]
+
+    -Misaligned table border [ #8176 ]
+
+    -(PassThePopcorn) Disable grouping
+
+    -Completed downloads in Qbit missing import path [ #9221 ]
+
+    -qBittorent history retention to allow at least 14 days seeding
+
+    -Only apply remote path mappings for completed items in Qbit
+
+
+  New:
+
+    -Revert cover mapping for collections, optimize translation mapping
+
+    -Log Notifiarr errors as warnings
+
+    -Prevent NullRef for cases when media covers have nullable urls
+
+    -Multiple Translations updated by Weblate
+
+    -Validate that naming formats don't contain illegal characters [ #5382 ]
+
+    -Calendar month view will scroll to today on load and press [ #8501 ]
+
+    -Add runtime param to ServerSideNotificationService
+
+    -Multiple Translations updated by Weblate
+
+  To view the full release notes visit: https://github.com/Radarr/Radarr/releases
+
 
 defaultUsername: ""
 defaultPassword: ""
