--- a/file-browser/umbrel-app.yml
+++ b/file-browser/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: file-browser
 category: files
 name: File Browser
-version: "2.24.2"
+version: "2.25.0"
 tagline: Browse and manage the files you download on your Umbrel
 description: >-
   File Browser lets you upload, delete, preview, rename and edit your folders and files.
@@ -10,15 +10,34 @@ description: >-
 
   Easily manage files in the Umbrel's storage folder where your downloads from apps like Transmission, Sonarr, Radarr, and Lidarr are currently held.
 releaseNotes: >-
-  This release updates File Browser from v2.22.4 to v2.24.2. It includes many bug fixes and performance improvements, as well as the following new features:
+  This release updates File Browser from v2.24.2 to v2.25.0. It includes many bug fixes and performance improvements, as well as the following new features:
 
-  - added option to copy download links from shares
 
-  - integrated tus.io for resumable and chunked uploads
+    - added shell resizing (#2648)
 
-  -  added right-to-left (rtl) support
+    - implement upload speed calculation and ETA estimation 
 
-  - and more!
+    - tus upload with cloudflare proxy
+
+    - update German translation (#2616)
+
+    - fixes for vite dev server (#2678)
+
+    - implement abort upload functionality (#2673)
+
+    - refactor path resolution logic for project root (#2674)
+
+    - add new folder button to move/create dialogs (#2667)
+
+    - optimize subtitles detection performance (#2637)
+
+    - bump go version to 1.21.0 (#2672)
+
+    - bump node version to 18 (#2671)
+
+    - fix frontend dev proxy settings
+
+    - migrate frontend tooling to vite 4 (#2645)
 
 
   The full release notes are available at https://github.com/filebrowser/filebrowser/releases
