tweak release notes intro

--- a/radarr/umbrel-app.yml
+++ b/radarr/umbrel-app.yml
@@ -19,7 +19,7 @@ gallery:
   - 3.jpg
 path: ""
 releaseNotes: >-
-  Update Radarr from 4.1.0.6175 to v5.0.3.8127
+  This update of Radarr from 4.1.0.6175 to v5.0.3.8127 includes various bug fixes, improvements, and new features, including the following highlights.
 
 
   Fixed:
