Update Plex to 1.32.6 (#803)
Co-authored-by: nmfretz <nmfretz@gmail.com>

--- a/plex/docker-compose.yml
+++ b/plex/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.7"
 
 services:
   server:
-    image: linuxserver/plex:version-1.32.5.7349-8f4248874@sha256:4f79fb474e01c629301c90bd3f39d47cc83678e6aceda15effa3e6320f8e296b
+    image: linuxserver/plex:1.32.6.7557-1cf77d501-ls188@sha256:6b82fe376f675a55204b68bd66a369d56c46eccc2fbb34fededa538c1a460b67
     restart: on-failure
     hostname: "${DEVICE_HOSTNAME}"
     environment:
