--- a/portainer/umbrel-app.yml
+++ b/portainer/umbrel-app.yml
@@ -54,12 +54,12 @@ releaseNotes: >-
   This update of Portainer from 2.19.0 to 2.19.1 includes various bug fixes, improvements, and new features, including the following highlights.
 
 
-  Breaking changes:
+  👉 Breaking changes:
 
   - Changes to API format and checking of some requests - See rest API changes below for more details.
 
 
-  Portainer:
+  👉 Portainer:
 
   - Fixed an issue where backup files were missing the Chisel private key. This could have disrupted communication between the Portainer server and agent after a restoration from backup.
 
@@ -68,7 +68,7 @@ releaseNotes: >-
   - Fixed an issue where toggles could be activated outside of their intended component area, potentially leading to inadvertent toggling.
 
 
-  RestAPI:
+  👉 RestAPI:
 
   - Fixed an issue introduced in 2.19.0 when Kubernetes environment metrics API features were enabled, where these features would return an ‘Unable to reach metrics API’ error.
 
