change submitter field

--- a/amato/umbrel-app.yml
+++ b/amato/umbrel-app.yml
@@ -19,6 +19,6 @@ defaultUsername: ""
 defaultPassword: ""
 repo: https://github.com/ziadgit/amato
 support: https://github.com/ziadgit/amato/issues
-submitter: ziadgit (github) - Ziad Hussain founder of bitparasol
+submitter: bitparasol
 submission: https://github.com/getumbrel/umbrel-apps/pull/729
 dependencies: []
