--- a/sabnzbd/umbrel-app.yml
+++ b/sabnzbd/umbrel-app.yml
@@ -33,4 +33,4 @@ defaultUsername: ""
 defaultPassword: ""
 torOnly: false
 submitter: ParthJadhav
-submission: 
+submission: https://github.com/getumbrel/umbrel-apps/pull/810
