chore: change download directory mounts

--- a/sabnzbd/docker-compose.yml
+++ b/sabnzbd/docker-compose.yml
@@ -12,7 +12,8 @@ services:
     stop_grace_period: 1m
     volumes:
       - ${APP_DATA_DIR}/data/config:/config
-      - ${UMBREL_ROOT}/data/storage/downloads:/downloads
+      - ${UMBREL_ROOT}/data/storage/downloads:/config/Downloads
+      - ${UMBREL_ROOT}/data/storage/downloads/incomplete:/config/incomplete-downloads
     environment:
       - PUID=1000
       - PGID=1000
