--- a/sabnzbd/docker-compose.yml
+++ b/sabnzbd/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     environment:
       APP_HOST: sabnzbd_web_1
       APP_PORT: 8080
+      PROXY_AUTH_WHITELIST: "/api/*"
 
   web:
     image: lscr.io/linuxserver/sabnzbd:4.1.0@sha256:84a54b2bd29198bc76e253c8592ac72996737d79f845c1db56ab053739cb61bc
