chore: whitelist wildcard path & update description

--- a/sabnzbd/umbrel-app.yml
+++ b/sabnzbd/umbrel-app.yml
@@ -15,6 +15,9 @@ description: >-
 
 
   If you want to know more you can head over to our website: https://sabnzbd.org.
+
+
+  👉 To integrate SABnzbd with other applications, you should use the IP address of your Umbrel instance in combination with Port 9876.
 developer: sabnzbd
 website: https://sabnzbd.org/
 dependencies: []
