--- a/ghostfolio/umbrel-app.yml
+++ b/ghostfolio/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: ghostfolio
 category: finance
 name: Ghostfolio
-version: "2.11.0"
+version: "2.14.0"
 tagline: Manage your wealth like a boss
 description: >-
   Ghostfolio is a privacy-first, open source dashboard for your personal finances.
@@ -31,30 +31,32 @@ path: ""
 deterministicPassword: false
 torOnly: false
 releaseNotes: >
-  Moving from v1.287.0 to v2.11.0, this update includes numerous bug fixes, performance improvements, and exciting new features. Here's what's new in the latest version:
+  This release upgrades Ghostfolio from v1.287.0 to v2.14.0, and includes numerous bug fixes, performance improvements, and exciting new features. Here's what's new in the latest version:
   
+
   Added:
 
-    - Added support to transfer a part of the cash balance from one to another account
-    - Extended the markets overview by benchmarks (date of last all time high)
-    - Added support to import historical market data in the admin control panel
+    - Added the OpenFIGI data enhancer for Financial Instrument Global Identifier (FIGI)
+    - Added figi, figiComposite and figiShareClass to the asset profile model
 
   Changed:
 
-    - Harmonized the style of the create button on the page for granting and revoking public access to share the portfolio
-    - Improved the language localization for German (de)
-    - Upgraded prisma from version 5.3.1 to 5.4.2
+    - Moved the fees on account level feature from experimental to general availability
+    - Moved the interest on account level feature from experimental to general availability
+    - Moved the search for a holding from experimental to general availability
+    - Improved the error message in the activities import for csv files
+    - Removed the application version from the client
+    - Allowed to edit today’s historical market data in the asset profile details dialog of the admin control panel
 
   Fixed:
 
-    - Fixed FEE and INTEREST types in the activities import of csv files
-    - Fixed the displayed currency of the cash balance in the create or update account dialog
+    - Fixed the style of the active page in the header navigation
+    - Trimmed text in i18n service to query messages.*.xlf files on the server
 
   Special Thanks
 
-    @Dhoni77
+    @dl90
     @dtslvr
-    @KK4ito
 
   For full release notes and additional changes from previous versions, please visit: https://github.com/ghostfolio/ghostfolio/releases
 submitter: BeauAgst
