Update ghostfolio to 2.14.0 (#805)
Co-authored-by: nmfretz <nmfretz@gmail.com>

--- a/ghostfolio/umbrel-app.yml
+++ b/ghostfolio/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: ghostfolio
 category: finance
 name: Ghostfolio
-version: "1.287.0"
+version: "2.14.0"
 tagline: Manage your wealth like a boss
 description: >-
   Ghostfolio is a privacy-first, open source dashboard for your personal finances.
@@ -31,20 +31,33 @@ path: ""
 deterministicPassword: false
 torOnly: false
 releaseNotes: >
+  This release upgrades Ghostfolio from v1.287.0 to v2.14.0, and includes numerous bug fixes, performance improvements, and exciting new features. Here's what's new in the latest version:
+  
+
+  Added:
+
+    - Added the OpenFIGI data enhancer for Financial Instrument Global Identifier (FIGI)
+    - Added figi, figiComposite and figiShareClass to the asset profile model
+
   Changed:
 
-  - Hid the average buy price in the position detail chart if there is no holding
-  
-  - Improved the language localization for French
-  
-  - Refactored the blog articles to standalone components
-
+    - Moved the fees on account level feature from experimental to general availability
+    - Moved the interest on account level feature from experimental to general availability
+    - Moved the search for a holding from experimental to general availability
+    - Improved the error message in the activities import for csv files
+    - Removed the application version from the client
+    - Allowed to edit today’s historical market data in the asset profile details dialog of the admin control panel
 
   Fixed:
-  
-  - Fixed the sorting by currency in the activities table
 
+    - Fixed the style of the active page in the header navigation
+    - Trimmed text in i18n service to query messages.*.xlf files on the server
 
-  For full release notes and additional changes from previous version 1.269, please visit: https://github.com/ghostfolio/ghostfolio/releases
+  Special Thanks
+
+    @dl90
+    @dtslvr
+
+  For full release notes and additional changes from previous versions, please visit: https://github.com/ghostfolio/ghostfolio/releases
 submitter: BeauAgst
 submission: https://github.com/getumbrel/umbrel-apps/pull/396
