--- a/sabnzbd/umbrel-app.yml
+++ b/sabnzbd/umbrel-app.yml
@@ -1,7 +1,7 @@
 manifestVersion: 1
 id: sabnzbd
 category: networking
-name: sabnzbd
+name: SABnzbd
 version: "4.1.0"
 tagline: The automated Usenet download tool
 description: >-
