--- a/electrs/umbrel-app.yml
+++ b/electrs/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: electrs
 category: bitcoin
 name: Electrs
-version: "0.9.14"
+version: "0.10.1"
 tagline: A simple and efficient Electrum Server
 description: >
   Run your personal Electrum server and connect your Electrum-compatible wallet,
@@ -30,8 +30,7 @@ gallery:
 path: ""
 defaultPassword: ""
 releaseNotes: >
-  This update brings Electrs from version 0.9.10 to 0.9.14, and includes a variety of improvements
-  and bug fixes. Most notably, this update includes a fix to allow Nunchuk Bitcoin Wallet users to
-  connect to Electrs. Read more at: https://github.com/romanz/electrs/blob/master/RELEASE-NOTES.md#0914-jun-10-2023
+  This update brings Electrs from version 0.9.14 to 0.10.1, there are a variety of improvements including optimizations to indexing. 
+  Read more at: https://github.com/romanz/electrs/blob/master/RELEASE-NOTES.md#0101-nov-01-2023
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel/pull/242
