Update Syncthing to v1.26.0

--- a/syncthing/umbrel-app.yml
+++ b/syncthing/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: syncthing
 category: files
 name: Syncthing
-version: "1.24.0"
+version: "1.26.0"
 tagline: Peer-to-peer file synchronization between your devices
 description: >-
   Syncthing is a peer-to-peer continuous file synchronization
@@ -28,17 +28,21 @@ defaultPassword: ""
 releaseNotes: >-
   This release includes the following bug fixes and enhancements:
 
-  - v1.23.6 introduces untrusted sharing regression
+  - Use a real login screen + sessions instead of HTTP basic auth
 
-  - Record more performance metrics
+  - Omitting %s from LDAP search filter results in corrupt search filter
 
-  - Announce IPv6 ULA
+  - Posting config with invalid versioner type causes panic
 
-  - Restore versions file filter should be case insensitive
+  - Deduplicated files on Windows aren't treated as regular files any more (Go 1.21)
 
-  - Check interface for FlagRunning
+  - Syncthing Docker container fails to start if underlying filesystem doesn't support chown
+
+  - traefik no longer url escape X-Forwarded-Tls-Client-Cert header
+
+  - Favicon is stuck in notify state
 
   
-  Full release notes can be found at https://github.com/syncthing/syncthing/releases/tag/v1.24.0
+  Full release notes can be found at https://github.com/syncthing/syncthing/releases/tag/v1.26.0
 submitter: Sam Cymbaluk
 submission: https://github.com/getumbrel/umbrel/pull/1092
